fix: wrap location on small screens

--- a/src/components/atoms/JobPosition/JobPosition.module.scss
+++ b/src/components/atoms/JobPosition/JobPosition.module.scss
@@ -1,11 +1,11 @@
 @import '../../../styles/mixins';
 
 .Text {
-	@include flex(row, flex-start, flex-start);
-	gap: 0.4rem;
+	display: inline;
 }
 
 .Additional {
 	color: var(--background-color-border-lighter);
 	font-weight: 800;
+	padding-left: 0.4rem;
 }
